# gridworks-web-backend

./: README.md  pyproject.toml  requirements.txt  sema_seed_request.yaml  setpoint_prediction.py  start_all.sh  start_api.sh  start_gateway.sh  template.env
api/: __main__.py  backend_api.py  config.py
api/archive/: archive_aggregate.py  archive_alerts.py
gateway/: README.md  config.py  topics.py
side_quests/: find_messages.py  heat_call_zone_attribution.py
visualizer/: visualizer_api.py
visualizer/sema_module/sema/: __init__.py  base.py  codec.py  property_format.py
visualizer/sema_module/sema/definitions/: registry.yaml
visualizer/sema_module/sema/enums/: __init__.py  gw1_lc_top_state.py  gw1_leaf_ally_all_tanks_state.py  gw1_leaf_ally_buffer_only_state.py  gw1_local_control_all_tanks_state.py  gw1_local_control_buffer_only_state.py  gw1_local_control_standby_top_state.py  gw1_main_auto_state.py  gw1_unit.py  gw_str_enum.py  log_level.py  relay_closed_or_open.py
visualizer/sema_module/sema/indexes/: dependency_closure.yaml  local_names.yaml  lookup.yaml  reverse_dependencies.yaml  seed_expanded.yaml  versions.yaml
visualizer/sema_module/sema/tests/: test_property_format.py
visualizer/sema_module/sema/types/: __init__.py  channel_readings_list_item.py  glitch.py  gridworks_event_problem.py  operating_state_sequence.py  single_machine_state.py  single_reading.py  snapshot_spaceheat.py  synced_readings_bundle.py  weather_forecast.py
visualizer/v2/routers/: messages.py  synced_readings_bundle.py
(+27 files in other folders)
